--- a/server/views/login.hbs
+++ b/server/views/login.hbs
@@ -1,8 +1,8 @@
 <div class="auth-page">
-  <div class="auth-card card">
+  <div class="auth-card">
     <h1>Login</h1>
 
-    <form id="login">
+    <form id="login" autocomplete="on">
       <input name="username" type="text" placeholder="Username" autocomplete="username" required />
       <input name="password" type="password" placeholder="Password" autocomplete="current-password" required />
       <button type="submit">Log in</button>
@@ -13,4 +13,4 @@
   </div>
 </div>
 
-<script src="../public/js/login.js" defer></script>
+<script src="/js/login.js" defer></script>
