Added friends and friend requests as well as a new page to manage those

--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -12,7 +12,9 @@
   </head>
   <body>
     <div class="page">
+      {{> header}}
       {{{body}}}
     </div>
+    <script src="/js/app.js" defer></script>
   </body>
 </html>
