--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -1,14 +1,28 @@
 <div class="app">
   <main class="container">
+
     <section class="card">
       <h2>Welcome! - This project is still being updated</h2>
-      <ul style="margin-left: 40px;">
-      </ul>
+      <ul style="margin-left: 40px;"></ul>
     </section>
+
+    <div class="two-up">
+      <section class="chats-card">
+        <h2>Chats</h2>
+        <ul style="margin-left: 40px;"></ul>
+        <section class="chats-card-inner">
+          
+        </section>
+      </section>
+
+      <section class="notebook-card">
+        <h2>Notebooks</h2>
+        <ul style="margin-left: 40px;"></ul>
+        <section class="notebooks-card-inner">
+          
+        </section>
+      </section>
+    </div>
+
   </main>
 </div>
-
-<script>
-
-</script>
-<script src="/js/home.js" defer></script>
