--- a/server/views/partials/header.hbs
+++ b/server/views/partials/header.hbs
@@ -8,7 +8,7 @@
   {{/unless}}
 
   <div class="brand">
-    <div class="brand-title">StudyHall</div>
+    <a class="brand-title" style="text-decoration: none; color: white;" href="/home">StudyHall</a>
   </div>
 </header>
 
